--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,1 +1,38 @@
+name: Build, Push and Deploy to GKE
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: ${{ secrets.GCP_PROJECT }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
+
+    - name: Docker login
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hello-world-app:latest .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-world-app:latest
+
+    - name: Get GKE credentials
+      run: |
+        gcloud container clusters get-credentials hello-autopilot-private --region us-central1
+
+    - name: Deploy to GKE
+      run: |
+        kubectl apply -f k8s/deployment.yaml
+        kubectl apply -f k8s/service.yaml
 
