--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,19 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app
+  name: hello-world-deployment
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: flask-app
+      app: hello-world
   template:
     metadata:
       labels:
-        app: flask-app
+        app: hello-world
     spec:
       containers:
-      - name: flask-container
-        image: <your-image-url>   # Replace this after you build & push image
+      - name: hello-world
+        image: your-dockerhub-username/hello-world-app:latest
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+        resources:
+          requests:
+            cpu: "250m"
+            memory: "256Mi"
