--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-service
+  name: hello-world-service
 spec:
   selector:
-    app: flask-app
+    app: hello-world
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
-  type: LoadBalancer  # For external access, or ClusterIP if internal only
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: LoadBalancer
