--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Build, Push and Deploy to GKE
+name: Build, Push, and Deploy to GKE with Artifact Registry
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up Cloud SDK
@@ -19,13 +19,17 @@ jobs:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
 
-    - name: Docker login
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-    - name: Build and push Docker image
+    - name: Configure Docker for Artifact Registry
       run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hello-world-app:latest .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-world-app:latest
+        gcloud auth configure-docker us-central1-docker.pkg.dev
+
+    - name: Build Docker image
+      run: |
+        docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/my-repo/hello-world-app:latest .
+
+    - name: Push Docker image to Artifact Registry
+      run: |
+        docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/my-repo/hello-world-app:latest
 
     - name: Get GKE credentials
       run: |
@@ -33,6 +37,5 @@ jobs:
 
     - name: Deploy to GKE
       run: |
-        kubectl apply -f k8s/deployment.yaml
+        kubectl set image deployment/hello-world-deployment hello-world=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/my-repo/hello-world-app:latest
         kubectl apply -f k8s/service.yaml
-
