--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,16 @@
-name: Build, Push, and Deploy to GKE with Artifact Registry
+name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout
       uses: actions/checkout@v3
 
     - name: Set up Cloud SDK
@@ -20,22 +21,20 @@ jobs:
         export_default_credentials: true
 
     - name: Configure Docker for Artifact Registry
-      run: |
-        gcloud auth configure-docker us-central1-docker.pkg.dev
+      run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
-    - name: Build Docker image
+    - name: Build and push to Artifact Registry
       run: |
-        docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:latest
-
-    - name: Push Docker image to Artifact Registry
-      run: |
-        docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:latest .
+        docker buildx build \
+          --push \
+          --tag us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/my-repo/hello-world-app:latest \
+          .
 
     - name: Get GKE credentials
-      run: |
-        gcloud container clusters get-credentials hello-autopilot-private --region us-central1
+      run: gcloud container clusters get-credentials hello-autopilot-private --region us-central1
 
     - name: Deploy to GKE
       run: |
         kubectl apply -f k8s/deployment.yaml
         kubectl apply -f k8s/service.yaml
+
