--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    #- name: Set up Docker Buildx
+     # uses: docker/setup-buildx-action@v3
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
@@ -31,7 +31,7 @@ jobs:
 
     - name: Build and push to Artifact Registry
       run: |
-        docker buildx build \
+        docker build \
           --push \
           --tag us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:latest \
           .
