--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,19 +21,19 @@ jobs:
     - name: Configure Docker for Artifact Registry
       run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
-    - name: List files in build context
-      run: ls -la
+    - name: Install GKE Auth Plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+    - name: Configure gcloud to use GKE auth plugin
+      run: gcloud config set container/use_application_default_credentials true
 
     - name: Build Docker image
       run: |
         docker build \
           -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:latest \
           .
-    - name: Debug Docker authentication
-      run: cat ~/.docker/config.json
-
-    - name: Show active gcloud account
-      run: gcloud auth list
 
     - name: Push image to Artifact Registry
       run: |
