--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,8 +23,7 @@ jobs:
 
     - name: Install GKE Auth Plugin
       run: |
-        sudo apt-get update
-        sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+           gcloud components install gke-gcloud-auth-plugin -q
 
     - name: Configure gcloud to use GKE auth plugin
       run: gcloud config set container/use_application_default_credentials true
