--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,10 @@ jobs:
 
     - name: Install GKE Auth Plugin
       run: |
-           gcloud components install gke-gcloud-auth-plugin -q
+       echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee /etc/apt/sources.list.d/google-cloud-sdk.list
+       curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+       sudo apt-get update
+       sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
 
     - name: Configure gcloud to use GKE auth plugin
       run: gcloud config set container/use_application_default_credentials true
