--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Setup VPN config
+      run: echo "${{ secrets.OVPN_CONFIG }}" > vpn.ovpn
+
+    - name: Connect to VPN
+      run: sudo openvpn --config vpn.ovpn --daemon
+
+    - name: Wait for VPN to initialize
+      run: sleep 10
+
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
