--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,14 +13,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Setup VPN config
-      run: echo "${{ secrets.OVPN_CONFIG }}" > vpn.ovpn
+    - name: Install OpenVPN
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openvpn3
 
-    - name: Connect to VPN
-      run: sudo openvpn --config vpn.ovpn --daemon
-
-    - name: Wait for VPN to initialize
-      run: sleep 10
+    - name: Connect to OpenVPN
+      run: |
+        echo "${{ secrets.VPN_CONFIG }}" > vpn_config.ovpn
+        sudo openvpn3 session-start vpn_config.ovpn
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
