--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Install OpenVPN
+    - name: Install OpenVPN 3
       run: |
+        sudo curl -fsSL https://packages.openvpn.net/packages-repo.gpg | sudo tee /etc/apt/trusted.gpg.d/openvpn.asc
+        echo "deb http://packages.openvpn.net/openvpn3/debian $(. /etc/os-release; echo $VERSION_CODENAME) main" | sudo tee /etc/apt/sources.list.d/openvpn-packages.list
         sudo apt-get update
         sudo apt-get install -y openvpn3
 
