--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,18 +50,19 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build \
-          -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:latest \
+          docker build \
+          -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:${{ github.sha }} \
           .
 
     - name: Push image to Artifact Registry
       run: |
-        docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:latest
+          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:${{ github.sha }}
+
 
     - name: Get GKE credentials
       run: gcloud container clusters get-credentials k8-cluster --region us-central1
 
     - name: Deploy to GKE
       run: |
-        kubectl apply -f k8s/deployment.yaml
-        kubectl apply -f k8s/service.yaml
+         kubectl set image deployment/hello-world-deployment hello-world=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:${{ github.sha }}
+         kubectl rollout status deployment/hello-world-deployment
