--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,11 @@ jobs:
     - name: Get GKE credentials
       run: gcloud container clusters get-credentials k8-cluster --region us-central1
 
+    - name: Deploy manifests to GKE
+      run: |
+        kubectl apply -f k8s/deployment.yaml
+        kubectl apply -f k8s/service.yaml
+
     - name: Deploy to GKE
       run: |
          kubectl set image deployment/hello-world-deployment hello-world=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/k8-repo/hello-world:${{ github.sha }}
