--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
 
 
     - name: Get GKE credentials
-      run: gcloud container clusters get-credentials k8-cluster --region us-central1
+      run: gcloud container clusters get-credentials k8-cluster --zone us-central1-a
 
     - name: Deploy manifests to GKE
       run: |
